# tpm2-abrmd

./: .cirrus.yml  .codecov.yml  .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  INSTALL  INSTALL.md  MAINTAINERS  Makefile.am  README  README.md  RELEASE.md  SECURITY.md  bootstrap  configure.ac
.ci/: ci-runner.sh  ci-tss-install.sh  coverity.run  docker.env  docker.run  enable-s390x.diff  get_deps.sh
.github/workflows/: codeql.yml  docker.yml  main.yml
coverity/: coverity-model.c
doc/: coding_standard_c.md  reference-counting.txt
lib/: default_config.site  tcti-tabrmd.pc.in  tpm-udev.rules  tpm2-abrmd.conf
m4/: ax_valgrind_check.m4  flags.m4
man/: Tss2_Tcti_Tabrmd_Init.3.in  colophon.in  tabd.8.in  tabd.man  tcti-tabrmd.7.in  tpm2-abrmd.8.in  tss2_tcti_tabrmd_init.3.in
scripts/: create-keys_parallel.sh  int-hardware-setup.sh  int-log-compiler.sh  int-simulator-setup.sh  int-test-funcs.sh  int-test-setup.sh  prompt-user.sh  run-hwtpm-test.sh  tpm2-abrmd_memcheck.sh  unit-count.sh  warn-user.sh
selinux/: Makefile  tabrmd.fc  tabrmd.if  tabrmd.te
src/: access-broker.c  access-broker.h  blob-queue.c  blob-queue.h  blob.c  blob.h  command-attrs.c  command-attrs.h  command-source.c  command-source.h  connection-manager.c  connection-manager.h  connection.c  connection.h  control-message.c  control-message.h  data-message.c  data-message.h  handle-map-entry.c  handle-map-entry.h  handle-map.c  handle-map.h  ipc-frontend-dbus.c  ipc-frontend-dbus.h  ipc-frontend.c  ipc-frontend.h  logging.c  logging.h  message-queue.c  message-queue.h  msg.c  msg.h  random.c  random.h  resource-manager-session.c  resource-manager-session.h  resource-manager.c  resource-manager.h  response-sink.c  response-sink.h  (+88 more)
src/include/: tabd.h  tabrmd.h  tcti-tabd.h  tcti-tabrmd.h  tss2-tabd.h  tss2-tcti-tabd.h  tss2-tcti-tabrmd.h
test/: access-broker_unit.c  blob-queue_unit.c  blob_unit.c  command-attrs_unit.c  command-source_unit.c  connection-manager_unit.c  connection_unit.c  data-message_unit.c  handle-map-entry_unit.c  handle-map_unit.c  ipc-frontend-dbus_unit.c  ipc-frontend_unit.c  logging_unit.c  message-queue_unit.c  mock-funcs.c  mock-funcs.h  mock-io-stream.c  mock-io-stream.h  msg_unit.c  random_unit.c  resource-manager_unit.c  response-sink_unit.c  response-watcher_unit.c  session-data_unit.c  session-entry_unit.c  session-list_unit.c  session-manager_unit.c  session-watcher_unit.c  session_unit.c  tab_unit.c  tabrmd-init_unit.c  tabrmd-options_unit.c  tcti-device_unit.c  tcti-dynamic_unit.c  tcti-echo.c  tcti-echo.h  tcti-echo_unit.c  tcti-factory_unit.c  tcti-mock.c  tcti-mock.h  (+19 more)
test/integration/: auth-session-max.int.c  auth-session-start-flush.c  auth-session-start-flush.int.c  auth-session-start-save-load.int.c  auth-session-start-save.int.c  change-endian.c  change-endian.h  common.c  common.h  concat-sized-byte-buffer.c  concat-sized-byte-buffer.h  context-util.c  context-util.h  create-keys.c  create-keys.int.c  define-nv-index.c  define-nv-index.h  fork-proxy-connection-unique.int.c  fork-proxy-new-for-bus.int.c  fork-proxy.int.c  fork-tcti-create-after.int.c  fork-tcti-parent-before-child-after.int.c  get-capability-handles-transient.c  get-capability-handles-transient.int.c  get-capability-with-session.int.c  hash-sequence.c  hash-sequence.int.c  hmac-authorization.c  main.c  manage-transient-keys.c  manage-transient-keys.int.c  max-transient-upperbound.int.c  not-enough-handles-for-command.int.c  password-authorization.c  password-authorization.int.c  session-gap.int.c  session-load-from-closed-connection.int.c  session-load-from-closed-connections-lru.int.c  session-load-from-open-connection.int.c  session-save-across-connections.int.c  (+17 more)
